# dextpane-l-net

./: README.md  app.py  config.json  main.py  pyproject.toml
attached_assets/: Pasted--usr-bin-env-python3-from-concurrent-futures-import-ThreadPoolExecutor-as-completed-from-contex-1747139257505.txt  Pasted-Features-And-Methods-Layer7-get-GET-GET-Flood-post-POST-POST-Flood-ovh-OVH-By-1747140523847.txt
data/: proxies.json
modules/: amplification_scanner.py  attack_methods.py  proxy_scanner.py  storage.py  ui.py  utils.py
static/css/: attacks.css  style.css
static/js/: main.js
templates/: amplification.html  attacks.html  index.html  layout.html  proxies.html
