[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.4.26",
    "cloudscraper>=1.2.71",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "icmplib>=3.0.4",
    "impacket>=0.12.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pyroxy>=0.1",
]
